refactor: get place and playinfo admin page