@@ -16,6 +16,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.support.PageableExecutionUtils;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -62,13 +63,61 @@ public class PlaceRepositoryImpl implements PlaceRepositoryCustom {
         return PageableExecutionUtils.getPage(content, pageable, countQuery::fetchOne);
     }
 
+    @Override
+    public Page<PlaceDetailDto> findAllByOrderByUpdatedAtDescByPageByRegionAdmin(Long regionId, Pageable pageable) {
+        List<PlaceDetailDto> content = jpaQueryFactory.select(
+                        Projections.constructor(
+                                PlaceDetailDto.class,
+                                place.placeId,
+                                place.placeName,
+                                place.placeImgUrl,
+                                place.placeAddress,
+                                place.placeNewAddress,
+                                place.placePhone,
+                                place.placeType.stringValue(),
+                                place.placeParking.stringValue(),
+                                place.placeFree.stringValue(),
+                                place.placeOperateTime,
+                                Projections.constructor(RegionDto.class, region.regionId, region.regionName),
+                                Projections.constructor(PlaceSubcateDto.class, placeCate.placeSubcate.placeSubcateId, placeCate.placeSubcate.placeSubcateName)
+                        )).from(place)
+                .join(place.region, region)
+                .join(place.placeCates, placeCate)
+                .where(regionEq(regionId))
+                .orderBy(place.updatedAt.desc())
+                .offset(pageable.getOffset())
+                .limit(pageable.getPageSize())
+                .fetch();
+
+        Map<Long, List<PlaceKeywordDto>> keywordsByPlaceList = findKeywordsByPlaceList(content);
+        content.forEach(c -> c.setPlaceKeywords(keywordsByPlaceList.get(c.getPlaceId())));
+
+        JPAQuery<Long> countQuery = jpaQueryFactory.select(place.countDistinct()).from(place)
+                .join(place.placeCates, placeCate)
+                .where(regionEq(regionId));
+
+        return PageableExecutionUtils.getPage(content, pageable, countQuery::fetchOne);
+    }
+
 
     private BooleanExpression regionEq(Long regionId) {
         return isEmpty(regionId) ? null : place.region.regionId.eq(regionId);
     }
 
-    private Map<Long, List<PlaceKeywordDto>> findKeywordsByPlaceList(List<PlaceListDto> content) {
-        List<Long> placeIdList = content.stream().map(PlaceListDto::getPlaceId).toList();
+    private Map<Long, List<PlaceKeywordDto>> findKeywordsByPlaceList(List<?> content) {
+        List<Long> placeIdList = List.of();
+        if (content.isEmpty()) {
+            placeIdList = Collections.emptyList(); // 예외 처리 또는 기본 값 할당
+        }
+        else if (content.get(0) instanceof PlaceListDto){
+            placeIdList = content.stream()
+                        .map(obj -> ((PlaceListDto) obj).getPlaceId())
+                        .collect(Collectors.toList());}
+        else if (content.get(0) instanceof PlaceDetailDto){
+            placeIdList = content.stream()
+                    .map(obj -> ((PlaceDetailDto) obj).getPlaceId())
+                    .collect(Collectors.toList());
+    }
 
 
         return jpaQueryFactory.select(
